--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using BallGame
-@namespace BallGame.Pages
+﻿@using BallGameMVC
+@using BallGameMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
